fix two sneaky typos and preserve an original this; it loads with no errors now

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,8 @@
 
     <div class="container">
       <!-- use action="/mock-tweets-for-meme" when testing to avoid Twitter rate limiting -->
-      <form action="/tweets-for-meme"> 
+      <!-- <form action="/tweets-for-meme">  -->
+      <form action="/mock-tweets-for-meme">
         <label for="meme"></label>
         <input type="text" name="meme" placeholder="e.g., AddAWordRuinAMovie">
         <button type="submit">Get Tweets</button>
